k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-api
  labels:
    app: weather-api
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
    - host: staging.max-weather.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weather-api
                port:
                  number: 80
